--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <div class="head-droite" id="lien-cv">
 
-            <a href="https://drive.google.com/file/d/115NY4Pct0UahudxHz4WJFpBM4SW7XpRu/view?usp=share_link"
+            <a href="https://drive.google.com/file/d/1eUzez6pPjJf7h7w3o4h72fZOjeskM7a-/view?usp=sharing"
                 target="_blank">
                 <i class="fa-solid fa-cloud-arrow-down"></i>
                 <p>CV</p>
